Added product page for demo

--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,47 @@ ul{
     white-space:nowrap;
 }
 
+p{
+    white-space: normal;;
+}
+
+pre {
+    display: block;
+    font-family: monospace;
+    white-space: pre;
+    margin: 1em 0;
+} 
+img {
+    border: 1px solid #eee;
+    padding: 2px;
+}
+
+label {
+    width: 120px;
+    float: left;
+    text-align: right;
+    padding-right: 20px; 
+}
+
+.demo_header {
+    margin:0 10px;
+}
+.form-control {
+    line-height: 16px;
+}
+select.form-control {
+    width: 120px;
+}
+
+input.form-control {
+    width: 240px
+}
+
+textarea.form-control {
+    width: 440px
+}
+
+
 .thumbnail {
     height:50px;
     padding:2px;
@@ -33,4 +74,31 @@ ul{
 #thumbnail li {
 	float: left;
 	padding: 10px;
+}
+
+..jumbotron {
+    padding: 20px !important;
+}
+
+/***Product List ***/
+.productList {
+    background: #FFF;
+}
+.productDetail {
+    padding: 5px;
+}
+
+.span12{
+    -moz-box-shadow: 0 0 2px black;
+    -webkit-box-shadow: 0 0 2px black;
+    box-shadow: 0 0 2px black;
+    padding : 5px;
+    height: 230px;
+}
+
+@media screen and (min-width: 768px)
+{
+    .jumbotron {
+        padding: 20px 10px;
+    }
 }
