--- a/css/main.css
+++ b/css/main.css
@@ -42,6 +42,20 @@ label {
     padding-right: 20px; 
 }
 
+table, th , td {
+  border: 1px solid grey;
+  border-collapse: collapse;
+  padding: 5px;
+}
+
+table tr:nth-child(odd) {
+  background-color: #f2f2f2;
+}
+
+table tr:nth-child(even) {
+  background-color: #ffffff;
+}
+
 .demo_header {
     margin:0 10px;
 }
